# focusquest

./: .easignore  .gitignore  ARQUITETURA.md  App.tsx  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/jni/: CMakeLists.txt
modules/app-blocker/: index.ts  package.json
modules/app-blocker/android/: build.gradle
modules/app-blocker/src/: AppBlocker.types.ts
patches/: expo-modules-core+3.0.30.patch  react-native-gesture-handler+2.28.0.patch  react-native-reanimated+4.1.1.patch  react-native-safe-area-context+5.6.2.patch  react-native-screens+4.16.0.patch  react-native-svg+15.12.1.patch  react-native-worklets+0.5.1.patch
plugins/: withAndroidNativeFix.js
scripts/: sync-app-version.mjs
src/application/: README.md
src/application/ports/: AppBlocker.ts  Clock.ts  IdGenerator.ts  NotificationScheduler.ts  index.ts
src/application/use-cases/: index.ts
src/domain/: README.md
src/domain/entities/: Achievement.ts  Category.ts  FocusSession.ts  Reward.ts  RewardRedemption.ts  Task.ts  TaskDailyCompletion.ts  User.ts  UserAchievement.ts  UserPreferences.ts  XPLog.ts  index.ts
src/domain/repositories/: AchievementRepository.ts  CategoryRepository.ts  FocusSessionRepository.ts  RewardRedemptionRepository.ts  RewardRepository.ts  TaskDailyCompletionRepository.ts  TaskNotificationRepository.ts  TaskRepository.ts  UserRepository.ts  (+3 more)
src/infrastructure/: README.md  index.ts
src/presentation/: README.md
src/shared/: README.md
(+309 files in other folders)
